--- a/TODO
+++ b/TODO
@@ -1,16 +1,13 @@
 bugs:
     announcements:
         - реквест форма отображается некорректно при изменении размера текстовых полей
-        - unexpected мусор ";" за карточками (в home тоже)
+        - мусор ";" за карточками (в home тоже)
         - rules read check не не работает
 
     admin_panel:
         - картинки карточек нестандартных размеров отображаются некорректно -> сделать как на главной
         - форматирование описаний не сохраняется
         - поле ввода текста съехало
-
-    requests:
-        - в работе - фишка с куками не работает
 
     back:
         - download throttle не работает (отдается прямая ссылка)
@@ -25,5 +22,4 @@ todo:
         - добавить авто очистку
 
     back:
-        - файло-хранилище
-        - расширенная страница для карт или что-то где можно скачать доп файлы
+        добавить валидацию
